Restricciones en vista

--- a/PIS_PROYECTO/src/vista/FrmPrincipalAdm.form
+++ b/PIS_PROYECTO/src/vista/FrmPrincipalAdm.form
@@ -85,9 +85,9 @@
               <Font name="Tahoma" size="14" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagenes/userpassword_deusuari_787.png"/>
+              <Image iconType="3" name="/imagenes/49576_new_add_plus_user_icon(1).png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Login"/>
+            <Property name="text" type="java.lang.String" value="Registro"/>
             <Property name="focusable" type="boolean" value="false"/>
             <Property name="horizontalTextPosition" type="int" value="0"/>
             <Property name="verticalTextPosition" type="int" value="3"/>
